# Python-Data-Quality

./: README.md  pyproject.toml
.github/workflows/: CI.yaml
app/: something.py
docs/: mkdocs.yml
docs/docs/: index.md
tests/: test_something.py
