[project]
name = "cursos-pydantic-jornada"
version = "0.1.0"
description = ""
authors = [
    {name = "Natan Schons",email = "natanschonsoficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-mermaid2-plugin (>=1.2.3,<2.0.0)",
    "mkdocs-material (>=9.7.3,<10.0.0)",
    "mkdocstrings[python] (>=1.0.3,<2.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python app/main.py
"""
doc = "mkdocs serve"

[tool.poetry]
package-mode = false